# cppLab

./: README.md
Paint2DApp/: CMakeLists.txt
Paint2DApp/src/: geometry_utils.cpp  geometry_utils.h  helper.cpp  helper.h  main.cpp  memory_utils.h  widget.cpp  widget.h  window.cpp  window.h
TaskGroup/: README.md  main.sublime-project  main.sublime-workspace
TaskGroup/include/: TaskGroup.h
TaskGroup/src/: CMakeLists.txt  TaskGroup.cpp  main.cpp
TaskScheduler/: README.md
TaskScheduler/src/: CMakeLists.txt  TaskScheduler.cpp  TaskScheduler.h  main.cpp
TimeSeries/src/: CMakeLists.txt  TimeSeries.cpp  TimeSeries.h  dashboard.hpp  main.cpp  time_series.hpp
TimeSeries2/src/: main.cpp
TimeSeries2/src/timeseries/: dashboard.hpp  timeseries.hpp  timeseries_attr.hpp  timeseries_attr_face.hpp  timeseries_attr_human.hpp  timeseries_colour.hpp  timeseries_pose.hpp
TimeSeries3/src/: CMakeLists.txt  dashboard.hpp  main.cpp  time_series.hpp
TimeSeries3/src/timeseries/: attribute_timeseries.hpp  dashboard.hpp  timeseries.hpp  timeseries_attr.hpp  timeseries_attr_human.hpp  timeseries_colour.hpp
TimeSeries4/include/: utils.h
TimeSeries4/src/: main.cpp
TimeSeries4/src/timeseries/: dashboard.hpp  timeseries.hpp  timeseries_attr.hpp  timeseries_attr_face.hpp  timeseries_attr_human.cpp  timeseries_attr_human.hpp  timeseries_colour.hpp  timeseries_pose.hpp
TimeSeries5/: CMakeLists.txt
TimeSeries5/src/: main.cpp
TimeSeries5/src/timeseries/: dashboard.hpp  timeseries.hpp
katas/: README.md
katas/hello_vsc2/: CMakeLists.txt
katas/max_counters/: README.md
katas/max_counters/src/: main.cpp
katas/utf8_x_uc2/src/: CMakeLists.txt  utf8_to_uc2.cpp
opencv-kalman-tracker/: CMakeLists.txt  README.md
opencv-kalman-tracker/source/: kalman_filter.cpp  kalman_filter.h  main.cpp
pplx/: README.md  main.sublime-project
pplx/src/: main.cpp
py_ocr/: OCR_Vehicle_and_Container_Id.ipynb  config.ini  ocr_truck_codes.py  requirements.txt
